--- a/src/styles.css
+++ b/src/styles.css
@@ -47,8 +47,8 @@ body {
 .filter-dropdown {
   padding: 8px;
   margin: 10px;
-  border-radius: 5px;
-  background-color: #fff;
+  border-radius: 10px;
+  background-color: #c9c6c6;
   color: #333;
 }
 
